# Kalshi

./: .env.example  .gitignore  AGENTS.md  README.md  pyproject.toml
docs/: mos.md  spec.md
kalshi_temp_pipeline/: __init__.py  __main__.py  report.py
kalshi_temp_pipeline/config/: __init__.py  settings.py
kalshi_temp_pipeline/db/: schema.sql
kalshi_temp_pipeline/pipeline/: flow.py
kalshi_temp_pipeline/pipeline/tasks/: __init__.py  baselines.py  decision.py  distributions.py  features.py  hierarchical.py  kalshi_api.py  market_bins.py  mos.py  mos_hierarchical.py  mos_quantile.py  mos_stacking.py  mos_wrappers.py  nowcast.py  obs_cli.py  postproc.py  time_windows.py  verify.py  wrf.py
tests/: test_baselines.py  test_decision.py  test_features.py  test_flow_prefect.py  test_hierarchical.py  test_kalshi_api.py  test_market_bins.py  test_mos.py  test_mos_hierarchical.py  test_mos_quantile.py  test_mos_stacking.py  test_mos_wrappers.py  test_nowcast_linear_updater.py  test_nowcast_truncation.py  test_obs_cli.py  test_postproc_station_extract.py  test_time_windows.py  test_verify.py  test_verify_report.py
tests/fixtures/: decision_orderbook_sample.json  iem_cli_sample.json  kalshi_candles_sample.json  kalshi_market_sample.json  kalshi_order_placed_sample.json  kalshi_orderbook_sample.json  public_baseline_sample.csv
