[tool.poetry]
name = "kalshi-temp-pipeline"
version = "0.1.0"
description = "MVP scaffold for Kalshi daily high temperature pipeline"
authors = ["Codex <codex@example.com>"]
readme = "README.md"
packages = [{ include = "kalshi_temp_pipeline" }]

[tool.poetry.dependencies]
python = ">=3.11,<4.0"
prefect = "^2.19.9"
pydantic = "^2.8.2"
httpx = "^0.27.0"
pandas = "^2.2.2"
numpy = "^2.0.1"
scipy = "^1.14.0"
scikit-learn = "^1.5.1"
sqlalchemy = "^2.0.31"
psycopg2-binary = "^2.9.9"
boto3 = "^1.34.149"
python-dotenv = "^1.0.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"
ruff = "^0.5.6"
mypy = "^1.11.1"

[tool.poetry.scripts]
kalshi-smoke = "kalshi_temp_pipeline.pipeline.flow:main"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
exclude = ["tests/"]
ignore_missing_imports = true

[build-system]
requires = ["poetry-core>=1.8.0"]
build-backend = "poetry.core.masonry.api"
